kagenti/installer/app/resources/ocp/keycloak-postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    istio-discovery: enabled
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-kc
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-kc
  serviceName: postgres-kc
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app: postgres-kc
    spec:
      volumes:
      - name: init-script
        configMap:
          name: postgres-kc-init-script
          defaultMode: 0755 
      containers:
      - env:
        - name: POSTGRESQL_DATABASE
          value: postgres
        - name: POSTGRESQL_USER
          value: testuser
        - name: POSTGRESQL_PASSWORD
          value: thisisonly4testingNOT4prod
        image: quay.io/fedora/postgresql-15
        imagePullPolicy: IfNotPresent
        name: postgres
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U postgres -d postgres
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault    
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: postgres-data
        - name: init-script
          mountPath: /usr/share/container-scripts/postgresql/start/ 
          readOnly: false
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-kc
  name: postgres-kc
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-kc
  type: ClusterIP
